--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -2,8 +2,8 @@ name: Rodar Script Python
 
 on:
   schedule:
-    - cron: '0 21 * * *' # roda todo início de hora
-  workflow_dispatch: # permite rodar manualmente
+    - cron: '0 21 * * *' # 18:00 BRT
+  workflow_dispatch:
 
 jobs:
   run-script:
@@ -17,4 +17,10 @@ jobs:
       - name: Instalar dependências
         run: pip install -r requirements.txt
       - name: Rodar Script
+        env:
+          TWILIO_NUMBER: ${{ secrets.TWILIO_NUMBER }}
+          TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID }}
+          TWILIO_AUTH_TOKEN: ${{ secrets.TWILIO_AUTH_TOKEN }}
+          MEU_WHATSAPP: ${{ secrets.MEU_WHATSAPP }}
         run: python anitube.py
+
