--- a/.github/workflows/run-script.yml
+++ b/.github/workflows/run-script.yml
@@ -19,8 +19,8 @@ jobs:
       - name: Rodar Script
         env:
           TWILIO_NUMBER: ${{ secrets.TWILIO_NUMBER }}
-          TWILIO_ACCOUNT_SID: ${{ secrets.TWILIO_ACCOUNT_SID }}
-          TWILIO_AUTH_TOKEN: ${{ secrets.TWILIO_AUTH_TOKEN }}
+          TWILIO_SID: ${{ secrets.TWILIO_SID }}
+          TWILIO_TOKEN: ${{ secrets.TWILIO_TOKEN }}
           MEU_WHATSAPP: ${{ secrets.MEU_WHATSAPP }}
         run: python anitube.py
 
